# wasmcbind

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  index.html  package-lock.json  package.json
cmake/: freestanding.cmake  wasi_libc.cmake  wasi_sysroot.cmake  wasmcbindConfig.cmake.in
examples/: .clangd  CMakeLists.txt  audio.c  button.c  jsbind_example.c  jscbind_example.c  typedarray_example.c
jsbind/: CMakeLists.txt
jsbind/include/jsbind/: .clangd  Any.h  Array.h  BigInt.h  BigIntArray.h  Console.h  Date.h  Error.h  Function.h  JSON.h  Map.h  Math.h  Null.h  Number.h  Object.h  Promise.h  Record.h  Reflect.h  RegExp.h  Response.h  Sequence.h  Set.h  String.h  Symbol.h  Undefined.h  global.h  jsbind.h  text.h  time.h  url.h  utils.h
jsbind/src/: .clangd  Any.c  Array.c  BigInt.c  BigIntArray.c  Console.c  Date.c  Error.c  Function.c  JSON.c  Map.c  Math.c  Null.c  Number.c  Object.c  Promise.c  Record.c  Reflect.c  RegExp.c  Response.c  Sequence.c  Set.c  String.c  Symbol.c  Undefined.c  global.c  lib.c  text.c  time.c  url.c
jscbind/: CMakeLists.txt
jscbind/examples/: CMakeLists.txt
jscbind/include/jscbind/: Any.h  Console.h  Date.h  Error.h  JSON.h  Map.h  Math.h  Null.h  Number.h  Object.h  Promise.h  Reflect.h  RegExp.h  Set.h  String.h  global.h  jscbind.h  time.h  url.h  utils.h
jscbind/src/: Any.c  Array.c  BigInt.c  BigIntArray.c  Console.c  Date.c  Error.c  Function.c  JSON.c  Map.c  Math.c  Null.c  Number.c  Object.c  Promise.c  Reflect.c  RegExp.c  Response.c  Set.c  String.c  Symbol.c  Undefined.c  global.c  lib.c  text.c  time.c  url.c
scripts/: clean.js  gen.js  globals.js  ignored.js  index.js  postprocess.js  utils.js
scripts/generators/: dictionary-generator.js  enum-generator.js  interface-generator.js  namespace-generator.js
scripts/parsers/: dependency-resolver.js  spec-parser.js  type-analyzer.js
webbind/: CMakeLists.txt
webbind/cmake/: feature_map.cmake
webbind/include/webbind/: .clangd  ANGLE_instanced_arrays.h  AacEncoderConfig.h  AbortController.h  AbortSignal.h  AbsoluteOrientationSensor.h  AbstractRange.h  Accelerometer.h  AccelerometerSensorOptions.h  AdAuctionData.h  AdAuctionDataBuyerConfig.h  AdAuctionDataConfig.h  AdAuctionOneSeller.h  AdAuctionPerSellerData.h  AdRender.h  AddEventListenerOptions.h  AddressErrors.h  AddressInit.h  AesCbcParams.h  AesCtrParams.h  AesDerivedKeyParams.h  AesGcmParams.h  AesKeyAlgorithm.h  AesKeyGenParams.h  Algorithm.h  AllAcceptedCredentialsOptions.h  AllowedBluetoothDevice.h  AllowedUSBDevice.h  AmbientLightSensor.h  AnalyserNode.h  AnalyserOptions.h  Animation.h  AnimationEffect.h  AnimationEvent.h  AnimationEventInit.h  AnimationNodeList.h  AnimationPlaybackEvent.h  AnimationPlaybackEventInit.h  AnimationTimeline.h  AnimationTrigger.h  (+2000 more)
webbind/src/: .clangd  ANGLE_instanced_arrays.c  AacEncoderConfig.c  AbortController.c  AbortSignal.c  AbsoluteOrientationSensor.c  AbstractRange.c  Accelerometer.c  AccelerometerSensorOptions.c  AdAuctionData.c  AdAuctionDataBuyerConfig.c  AdAuctionDataConfig.c  AdAuctionOneSeller.c  AdAuctionPerSellerData.c  AdRender.c  AddEventListenerOptions.c  AddressErrors.c  AddressInit.c  AesCbcParams.c  AesCtrParams.c  AesDerivedKeyParams.c  AesGcmParams.c  AesKeyAlgorithm.c  AesKeyGenParams.c  Algorithm.c  AllAcceptedCredentialsOptions.c  AllowedBluetoothDevice.c  AllowedUSBDevice.c  AmbientLightSensor.c  AnalyserNode.c  AnalyserOptions.c  Animation.c  AnimationEffect.c  AnimationEvent.c  AnimationEventInit.c  AnimationNodeList.c  AnimationPlaybackEvent.c  AnimationPlaybackEventInit.c  AnimationTimeline.c  AnimationTrigger.c  (+1999 more)
webcbind/: CMakeLists.txt
webcbind/examples/: CMakeLists.txt
webcbind/include/webcbind/: ANGLE_instanced_arrays.h  AacEncoderConfig.h  AbortController.h  AbortSignal.h  AbsoluteOrientationSensor.h  AbstractRange.h  Accelerometer.h  AccelerometerSensorOptions.h  AdAuctionData.h  AdAuctionDataBuyerConfig.h  AdAuctionDataConfig.h  AdAuctionOneSeller.h  AdAuctionPerSellerData.h  AdRender.h  AddEventListenerOptions.h  AddressErrors.h  AddressInit.h  AesCbcParams.h  AesCtrParams.h  AesDerivedKeyParams.h  AesGcmParams.h  AesKeyAlgorithm.h  AesKeyGenParams.h  Algorithm.h  AllAcceptedCredentialsOptions.h  AllowedBluetoothDevice.h  AllowedUSBDevice.h  AmbientLightSensor.h  AnalyserNode.h  AnalyserOptions.h  Animation.h  AnimationEffect.h  AnimationEvent.h  AnimationEventInit.h  AnimationNodeList.h  AnimationPlaybackEvent.h  AnimationPlaybackEventInit.h  AnimationTimeline.h  AnimationTrigger.h  AnimationTriggerOptions.h  (+1995 more)
webcbind/src/: ANGLE_instanced_arrays.c  AacEncoderConfig.c  AbortController.c  AbortSignal.c  AbsoluteOrientationSensor.c  AbstractRange.c  Accelerometer.c  AccelerometerSensorOptions.c  AdAuctionData.c  AdAuctionDataBuyerConfig.c  AdAuctionDataConfig.c  AdAuctionOneSeller.c  AdAuctionPerSellerData.c  AdRender.c  AddEventListenerOptions.c  AddressErrors.c  AddressInit.c  AesCbcParams.c  AesCtrParams.c  AesDerivedKeyParams.c  AesGcmParams.c  AesKeyAlgorithm.c  AesKeyGenParams.c  Algorithm.c  AllAcceptedCredentialsOptions.c  AllowedBluetoothDevice.c  AllowedUSBDevice.c  AmbientLightSensor.c  AnalyserNode.c  AnalyserOptions.c  Animation.c  AnimationEffect.c  AnimationEvent.c  AnimationEventInit.c  AnimationNodeList.c  AnimationPlaybackEvent.c  AnimationPlaybackEventInit.c  AnimationTimeline.c  AnimationTrigger.c  AnimationTriggerOptions.c  (+1995 more)
